--- a/home.html
+++ b/home.html
@@ -2,13 +2,340 @@
 
 <html>
   <head>
-    <title>INSERT TITLE HERE!</title>
+    <title>Responsive Redesign Project</title>
     <link rel="stylesheet" href="index.css">
+    <script src="https://use.fontawesome.com/releases/v5.14.0/js/all.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <!-- TODO: add additional links here! e.g. fonts, icons, more stylesheets, etc. -->
     <meta content="width=device-width, initial-scale=1" name="viewport" />
   </head>
 
   <body>
     <!-- TODO: put your HTML code here! -->
+    <div class="container1">
+      <img id="title-photo" src="mostra-main.jpeg" data-aos="fade-up" data-aos-delay="200">
+      <div id="first-title" data-aos="fade-up" data-aos-delay="200">
+        Responsive Redesign
+      </div>
+      <div id ="description" data-aos="fade-right" data-aos-delay="200">
+        For this project, I redesigned the homepage of Mostra Coffee’s website. Mostra Coffee
+        is a local coffee shop in San Diego, and as a coffee lover, I go there
+        at least once a week. I redesigned the website to improve usability and
+        learnability. I identified problems in the original website, created 
+        low-fidelity and high-fidelity prototypes to fit different screen sizes, 
+        and used the prototypes as a guideline to build a new responsive website.
+      </div>
+    </div>
+
+    <div class="navbar">
+      <hr/>
+    </div>
+
+    <div class="container2">
+      <div id="box">
+        <div id="title">
+          Introduction: The Original Website 
+        </div>
+      </div>
+      <div id="box2">
+        <img id="original-website" src="original website.jpg">
+        <div id="link">
+          Link: <a target="_blank" href=https://www.mostracoffee.com>https://www.mostracoffee.com</a>
+        </div>
+      </div>
+
+    <div class="navbar">
+        <hr/>
+    </div>
+
+    <div class="container3">
+      <div id="box">
+        <div id="title">
+        Usability Problems:
+        </div>
+      </div>
+      <div id="box2">
+      <div id="p">
+       <li>
+        <b>No hierarchy of elements.</b> There is a hamburger menu in the top left corner
+        of the website with the following options: Order To Go, Shop, About, Locations & 
+        Menu, and Contact. However, the same options are also scattered throughout the website. 
+        The website not only repeats the same information but also shows no hierarchy in the information. 
+      </li>
+      </div>
+      <div id="p">
+        <li>
+          <b>Too many clicks required to complete a single task.</b> For instance, to find a nearby location,
+          a user has to click on the Locations & Menu button. Instead of forcing users to click a button 
+          to find this information, it might be useful to just display it in the homepage. 
+        </li>
+      </div>
+      <div id="p">
+        <li>
+          <b>Minimal white space.</b> There is not much white space throughout the homepage,
+          and it is clumped with a lot of text and images.
+        </li>
+      </div>
+      <div id="p">
+        <li>
+          <b>Unnecessary buttons.</b> When a user clicks on the Locations & Menu option, 
+          the website navigates to another page with the different locations. Under each location,
+          there is a View Menu button. However, when one clicks on the View Menu button, the menu
+          that is displayed is the same for all the locations. Thus, it might be helpful if the 
+          website has just one central Menu button in a navigation menu so that new users know 
+          that the menu is the same for all the locations.
+        </li>
+      </div>
+      </div>
+    </div>
+
+    <div class="navbar">
+      <hr/>
+    </div>
+
+    <div class="container4">
+      <div id="box">
+        <div id="title">
+        Accessability Findings:
+        </div>
+      </div>
+      <div id="box2">
+        <div id="p">
+          After using WebAIM WAVE on the original website, 
+          I found that the website does not have a heading structure. 
+          I also noticed that one of the titles in the homepage has very low contrast, 
+          making it difficult for the users to read the title since it is displayed over an image. 
+          There were two missing form labels for input boxes where users are able to input their 
+          first name and last name to join the Mostra Coffee community. When I tested the website 
+          by using a screen-reader, I noticed that because of these missing form labels, the screen-reader 
+          was unable to detect these input boxes. In addition to missing form labels, there were two empty 
+          form labels, one for a hamburger menu and one for an image. When using voice over to test the website, 
+          I noticed that when I clicked on the hamburger menu, it said that I was on an image. 
+          Then, when I pressed on the image, the voice over said I was on heading level 1. It seemed like the 
+          voice over could not actually detect whether I was on the hamburger menu or the image. 
+        </div>
+      </div>
+    </div>
+
+    <div class="navbar">
+      <hr/>
+    </div>
+
+    <div class="container5">
+      <div id="box">
+        <div id="title">
+        Low-Fidelity Wireframes:
+        </div>
+      </div>
+      <div id="box2">
+        <div id="p2">
+          <b>Mobile:</b> 
+        </div>
+        <div id="p2">
+        <img id="lo-fi-mobile" src="lo-fi (mobile).jpeg">
+        </div>
+        <div id="p">
+          I kept the hamburger menu to allow users to navigate 
+          through the website. However, I placed the hamburger menu on the top right corner of the website 
+          instead of the top left corner. Additionally, I placed the main image underneath the hamburger 
+          menu so that users are able to clearly see the hamburger menu. In the original website, 
+          the hamburger menu is overlapping with the main image, which may make it difficult for users to notice it. 
+        </div>
+        <div id="p">
+          Because the mobile screen is small, I deleted the welcoming message, "Welcome to MOSTRA," as well
+          as the description of the coffee shop in the redesign. My priority was keeping the essential information, and I thought that 
+          the welcoming message and the description can also be found in the About page of the website. 
+        </div>
+        <div id="p2">
+          <b>Tablet:</b> 
+        </div>
+        <img id="lo-fi-tablet" src="lo-fi tablet.jpeg">
+        <div id="p">
+          Similar to the mobile wireframe, I also kept the hamburger menu and deleted the welcoming message and the description 
+          of Mostra Coffee in the tablet wireframe. 
+        </div>
+        <div id="p">
+          Moreover, in the original website, the Instagram Page section of the homepage has 4 columns that display the Instagram photos (for tablet and desktop screen sizes). 
+          To keep consistency with the rest of the website, I changed the 4 columns to 3 columns in the tablet wireframe.
+        </div>
+        <div id="p2">
+          <b>Desktop:</b> 
+        </div>
+        <img id="lo-fi-desktop" src="lo-fi desktop.jpeg">
+        <div id="p">
+          Similar to the tablet wireframe, I also changed the Instagram Page section of the homepage in the dekstop wireframe so that 
+          it now displays 3 columns rather 4 columns. 
+        </div>
+        <div id="p">
+          Instead of a hamburger menu, I added a central navigation bar at the top right corner. This improves accessibility because it allows users to easily see the different options 
+          in the website.
+        </div>
+        <div id="p">
+          Since the desktop screen is so much bigger than the mobile and tablet screens, I kept the welcoming message, "Welcome to MOSTRA," 
+          as well as the description of the coffee shop. 
+        </div>
+       
+        <div id="p2">
+          <b>For all wireframes: </b>
+        </div>
+        <div id="p">
+          I included a “Find the nearest store”
+          section in the homepage so that both new and returning users are able to search the 
+          nearest Mostra Coffee based on their current location. This improves both accessibility 
+          and usability because users no longer need to click on the Locations & Menu button to 
+          find the nearest location. Instead, this information is directly on the homepage. 
+          Furthermore, the original website only includes a Google Maps image of the nearest location. 
+          The redesign allows users to enter their zipcode in order to actually search for the closest store. 
+        </div>
+        <div id="p">
+          I also included a “Best Sellers: Coffee Drinks & Tea section” in the homepage. 
+          The original website only has a “Best Sellers” section for their coffee beans, which 
+          assumes that users of this website are mostly interested in buying coffee beans rather than drinks. 
+          For new and returning users who want to order drinks online for pickup, it would be useful to have 
+          a section that displays best-selling drinks. 
+        </div>
+    </div>
+    </div>
+
+    <div class="navbar">
+      <hr/>
+    </div>
+
+    <div class="container6">
+      <div id="box">
+        <div id="title">
+        High-Fidelity Prototypes:
+        </div>
+      </div>
+      <div id="box2">
+        <div id="p2">
+          <b>Mobile:</b> 
+        </div>
+        <img id="hi-fi-mobile" src="hi-fi mobile.jpeg">
+        <div id="p2">
+          <b>Tablet:</b> 
+        </div>
+        <img id="hi-fi-tablet" src="hi-fi tablet.jpeg">
+        <div id="p2">
+          <b>Desktop:</b> 
+        </div>
+        <img id="hi-fi-desktop" src="hi-fi desktop.jpeg">
+      </div>
+    </div>
+
+    <div class="navbar">
+      <hr/>
+    </div>
+
+    <div class="container7">
+      <div id="box">
+        <div id="title">
+        Visual Design Style Guide:
+        </div>
+      </div>
+      <div id="box2">
+        <img id="visual-guide" src="Visual Design Style Guide.jpg">
+      </div>
+    </div>
+
+    <div class="navbar">
+      <hr/>
+    </div>
+
+    <div class="container8">
+      <div id="box">
+        <div id="title">
+        Redesigned Website:
+        </div>
+      </div>
+      <div id="box2">
+        <div id="p">
+          The redesigned website can be found at <a target="_blank" href=https://mostra-coffee-redesign.herokuapp.com>https://mostra-coffee-redesign.herokuapp.com</a>.
+          The Github repo is at <a target="_blank" href=https://github.com/nicolekimm/mostra-coffee-redesign>https://github.com/nicolekimm/mostra-coffee-redesign</a>. 
+        </div>
+        <div id="p">
+          Here are some screenshots of the redesigned website!  
+        </div>
+        <div id="p2">
+          <b>Mobile:</b> 
+        </div>
+        <img id="mobile-redesign" src="redesign mobile.jpg">
+        <div id="p2">
+          <b>Tablet:</b> 
+        </div>
+        <img id="tablet-redesign" src="redesign tablet.jpeg">
+        <div id="p2">
+          <b>Desktop:</b> 
+        </div>
+        <img id="desktop-redesign" src="redesign screenshot desktop.jpg">
+        <div id="p3">
+          To test the accessibility of my website, I played with the size of the browser to see how the 
+          website looks in different screen sizes. I was able to see that the website is responsive! For instance,
+          the navigation bar changed into a hamburger menu when I made the size of the browser as small as a mobile phone screen.
+          I also tried changing the font size on my browser. When I made the font size really large on Google Chrome, I noticed that it made the hamburger
+          menu become not aligned to the logo for the mobile phone screen. Thus, I fixed this problem by making the font size smaller for the logo for the mobile phone screen.
+          Finally, I tested the website's responsiveness by using the Google Chrome Responsive Tool and WebAIM Wave.
+        </div>
+      </div>
+    </div>
+
+    <div class="navbar">
+      <hr/>
+    </div>
+
+    <div class="container9">
+      <div id="box">
+        <div id="title">
+        Citations:
+        </div>
+      </div>
+      <div id="box2">
+        <div id="p">
+          All the images except for the image right under the logo and the navigation bar were taken from Mostra Coffee's original 
+          website. They can be found at <a target="_blank" href=https://www.mostracoffee.com>https://www.mostracoffee.com</a>.
+        </div>
+        <div id="p">
+          I was able to create a responsive navigation menu with the help of the open source library, CodePen. I based my code off 
+          of <a target="_blank" href=https://codepen.io/mutedblues/pen/MmPNPG>https://codepen.io/mutedblues/pen/MmPNPG</a>.
+        </div>
+        <div id="p">
+          I created my form boxes with the help of W3Schools. I based my code off of <a target="_blank" href=https://www.w3schools.com/css/tryit.asp?filename=trycss_forms>https://www.w3schools.com/css/tryit.asp?filename=trycss_forms</a>.
+        </div>
+      </div>
+    </div>
+
+    <div class="navbar">
+      <hr/>
+    </div>
+
+    <div class="container10">
+      <div id="box">
+        <div id="title">
+        Concluding Thoughts:
+        </div>
+      </div>
+      <div id="box2">
+        <div id="p">
+        This project made me think a lot about how a layout in a website may look different based on the screen size. 
+        I empathized with users and thought about their needs and motivations for looking at a particular website. 
+        I didn't realize how much work it took to design different layouts for one page of a website. Through this project, 
+        I was also able to improve my skills in HTML/CSS and gain more experience in creating wireframes and prototypes.
+      </div>
+      </div>
+    </div>
+
+
+
+
+
+    <div id="p4"></div>
+
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+          AOS.init();
+    </script>
   </body>
 </html>
