--- a/home.html
+++ b/home.html
@@ -263,7 +263,7 @@
       </div>
       <div id="box2">
         <div id="p">
-          The redesigned website can be found at <a target="_blank" href="https://mostra-redesign.herokuapp.com/">https://mostra-coffee-redesign.herokuapp.com</a>.
+          The redesigned website can be found at <a target="_blank" href="https://mostra-redesign.herokuapp.com/">https://mostra-redesign.herokuapp.com/</a>.
         </div>
         <div id="p">
           Below, I have included some screenshots of the redesigned website!  
