--- a/home.html
+++ b/home.html
@@ -275,7 +275,7 @@
         <div id="p2">
           <b>Tablet:</b> 
         </div>
-        <img id="tablet-redesign" src="redesign tablet.jpeg">
+        <img id="tablet-redesign" src="redesign tablet.jpg">
         <div id="p2">
           <b>Desktop:</b> 
         </div>
